# IN204

./: CMakeLists.txt  economic.hpp  graph.hpp  interval.cpp  interval.hpp  main.cpp  module.hpp
TD1-5/: CMakeLists.txt  economic.cpp  interval.cpp  interval.hpp  math.hpp  module.cpp
TD6/: CMakeLists.txt  main.cpp  test.txt
TD6/Part1.1/: Part1.1.vcxproj  main.cpp
TD6/Part1.2/: Part1.2.vcxproj  Part1.2.vcxproj.filters  main.cpp  math.cpp  math.hpp
TD6/Part2.1/: Part2.1.vcxproj  main.cpp  math.cpp
TD6/Part2.2/: Part2.2.vcxproj  Part2.2.vcxproj.filters  main.cpp  math.cpp  math.hpp
TD6/Part3.1/: ExtendedException.hpp  Part3.1.vcxproj  Part3.1.vcxproj.filters  main.cpp  math.cpp  math.hpp
TD6/Part4.1/: Part4.1.vcxproj  main.cpp  math.cpp  math.hpp
TD6/Part4.2/: Part4.2.vcxproj  main.cpp  math.cpp
TD7/: CMakeLists.txt  Counter.hpp  Drawing.hpp  main.cpp  td3.hpp
TD8/: CMakeLists.txt  main.cpp  main.hpp  math.cpp  math.hpp
