cmake_minimum_required (VERSION 3.0)
project (td6)

# CONFIG COMPILATION
if (MSVC)
    # warning level 4 and all warnings as errors
    add_compile_options(/W4 /WX)
else()
    # lots of warnings and all warnings as errors
    add_compile_options(-Wall -Wextra -pedantic -Werror)
endif()

add_executable(td7 main.cpp)